--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         
     </head>
         <body>
-            <header>
+            
             <h1> MY Goals for the year</h1>
+            <header>
 
-            <h1>Hello World!</h1>
+            <h2>Hello World!</h2>
 
             <nav aria-label="primary-navigation">
                 <ul>
                     <li>
-                        <a href="#html">learn HTML></a>
+                        <a href="#html">learn HTML</a>
                         <li>
                             <a href="#vacation">planning a vacation</a>
                         </li>
